# PaperSeek

./: .gitignore  .gitmodules  README.md  config.py  main.py  pyproject.toml
data/: dim_cps.xlsx  eval_cps.xlsx  evaluation_data.json  litqeval_cps.xlsx  metadata.xlsx  synergy_cps.xlsx
models/: __init__.py  base.py  evaluate.py
models/generalist/: MiniLm.py  __init__.py  e5.py  linq.py  nvembed.py  openai.py  qwen2.py  stella.py
models/rerankers/: __init__.py  bge.py  bm25.py  minilm.py  rpf.py
models/scientific/: __init__.py  scibert.py  specter.py  specter2.py  specter2_adhoc.py
notebooks/: active_learning.ipynb  evaluation.ipynb  figures.ipynb  semantic_search.ipynb
notebooks/ablations/: cp_effect.ipynb  hyde.ipynb  hyqe.ipynb  query_structure.ipynb  rerankers.ipynb  synthetic_data.ipynb  utils.py
scripts/benchmark_embedding_models/: run.sh  script.py
scripts/misc/: append_synergy.py  create_db.py  fetch_openalex.py  qdrant_migration.py  qdrant_vs_fullscan.py  umap_db.py
scripts/openalex_download/: decompression.py  decompression.sh  generate_embeddings.py  generate_embeddings.sh  merge_data.py  test_embeddings.py
scripts/rerankers/: main.py  script.sh
utils/: __init__.py  datareader.py  eda.py  plotting.py  qdrant_api.py  query.py  synthetic.py
